# Cheyt

./: .flutter-plugins  .flutter-plugins-dependencies  .gcloudignore  .gitignore  .replit  CHANGELOG.md  README.md  android_main.py  beeware_app.py  build_apk.sh  buildozer.spec  calibration.db  cloudbuild.yaml  flet.build.json  flet.config.json  interpolation.py  main.py  main_android.py  pubspec.yaml  push_changes.sh  pyproject.toml  replit.nix  requirements.txt  utils.py
.dart_tool/: package_config_subset
.github/workflows/: android-build.yml  flet-build.yml
.streamlit/: config.toml
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
attached_assets/: Pasted--Command-failed-opt-hostedtoolcache-Python-3-11-11-x64-bin-python-m-pythonforandroid-to-1739023960309.txt  Pasted-From-the-logs-and-android-build-yml-it-appears-the-job-is-failing-due-to-a-missing-cache-key-for-th-1739023541139.txt  Pasted-STDERR-Command-failed-opt-hostedtoolcache-Python-3-11-11-x64-bin-python-m-pythonforan-1739024338148.txt  Pasted-name-Build-Android-APK-on-push-branches-main-tags-v-pull-request--1739024575674.txt
build_app/app/: __init__.py
flet_project/src/weight_calculator/: database.py  interpolation.py
flet_project/src/weight_calculator.egg-info/: top_level.txt
p4a-recipes/libffi/: __init__.py
src/weight_calculator/: __init__.py  app.py
src/weight_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
