[project]
name = "weight-calculator"
version = "0.1.0"
description = "Weight calculator application using pressure-based interpolation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "streamlit>=1.42.0",
    "scipy>=1.12.0",
    "buildozer==1.5.0",
    "kivy>=2.3.1",
    "cython==0.29.36",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
