[project]
name = "weight-calculator"
version = "1.0.0.5"
description = "Weight calculator application using pressure-based interpolation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "streamlit>=1.42.0",
    "scipy>=1.12.0",
    "briefcase>=0.3.17",
    "toga>=0.4.0",
    "toga-android>=0.4.9",
    "toga-core>=0.4.9",
    "pillow>=11.1.0",
    "altair>=5.5.0",
    "kivy>=2.2.1",
    "twilio>=9.4.4",
    "trafilatura>=2.0.0",
]

[project.license]
text = "BSD"

[tool.briefcase]
project_name = "Weight Calculator"
bundle = "org.weightcalc"
version = "1.0.0.5"
url = "https://github.com/rockman256s/Cheyt.git"
author = "rockman256s"
author_email = "rockman256s@github.com"

[tool.briefcase.app.weight_calculator]
formal_name = "Weight Calculator"
description = "Weight calculator application using pressure-based interpolation"
icon = "src/weight_calculator/resources/weight_calculator"
sources = ["src/weight_calculator"]
test_sources = ["tests"]

[tool.briefcase.app.weight_calculator.android]
requires = [
    "toga-android>=0.4.0",
]
build_gradle_dependencies = [
    "androidx.appcompat:appcompat:1.0.2",
    "androidx.constraintlayout:constraintlayout:1.1.3",
    "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"