[project]
name = "weight-calculator"
version = "1.0.0.1"
description = "Weight calculator application using pressure-based interpolation"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.28.0",
    "pandas==2.1.0",
    "numpy==1.26.0",
    "scipy==1.11.3",
    "altair==5.1.2",
    "pillow>=10.0.1",
    "kivy==2.3.1",
    "buildozer==1.5.0",
    "cython==0.29.36",
    "flet==0.19.0",
    "flet-core==0.19.0",
    "requests>=2.32.3",
]

[project.license]
text = "BSD"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
